--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/commander": "2.12.2",
+    "@types/fibers": "3.1.0",
     "@types/node": "14.0.9",
     "@types/vimeo": "2.1.1",
     "prettier": "2.0.5",
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "commander": "5.1.0",
+    "fibers": "5.0.0",
     "vimeo": "2.1.1"
   }
 }
