--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vimeo-library-manager",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A manager for your Vimeo libraries",
   "author": "Kristof Csillag <csillag.kristof@gmail.com>",
   "main": "index.js",
@@ -20,7 +20,11 @@
   },
   "dependencies": {
     "commander": "5.1.0",
+    "connect": "3.7.0",
     "fibers": "5.0.0",
+    "open": "7.0.4",
+    "shortid": "2.2.15",
+    "uri-js": "4.2.2",
     "vimeo": "2.1.1"
   },
   "bin": {
