--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "commander": "5.1.0",
     "connect": "3.7.0",
     "fibers": "5.0.0",
+    "lodash.get": "4.4.2",
     "open": "7.0.4",
     "shortid": "2.2.15",
     "uri-js": "4.2.2",
