Finished support for uploading video

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fibers": "5.0.0",
     "lodash.get": "4.4.2",
     "open": "7.0.4",
+    "ora": "4.0.4",
     "shortid": "2.2.15",
     "uri-js": "4.2.2",
     "vimeo": "2.1.1"
