--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vimeo-library-manager",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "A manager for your Vimeo libraries",
   "author": "Kristof Csillag <csillag.kristof@gmail.com>",
   "main": "build/index.js",
@@ -19,6 +19,7 @@
     "typescript": "3.9.3"
   },
   "dependencies": {
+    "axios": "0.19.2",
     "commander": "5.1.0",
     "connect": "3.7.0",
     "fibers": "5.0.0",
