--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "connect": "3.7.0",
     "fibers": "5.0.0",
     "lodash.get": "4.4.2",
+    "lodash.set": "4.3.2",
     "open": "7.0.4",
     "ora": "4.0.4",
     "shortid": "2.2.15",
